--- a/app/src/main/res/layout/dialog_edit_name_list.xml
+++ b/app/src/main/res/layout/dialog_edit_name_list.xml
@@ -3,6 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="Edit list name" />
+
     <EditText
         android:id="@+id/et_edit_list_name"
         android:layout_width="match_parent"
