--- a/app/src/main/res/layout/dialog_edit_articles.xml
+++ b/app/src/main/res/layout/dialog_edit_articles.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -13,6 +14,8 @@
         android:id="@+id/et_edit_nameArticle"
         android:hint="@string/enter_article_name"
         android:layout_width="match_parent"
+        android:textSize="30dp"
+        android:textStyle="bold"
         android:layout_height="wrap_content" />
 
     <TextView
@@ -23,6 +26,8 @@
 
     <EditText
         android:id="@+id/et_edit_amountArticle"
+        android:textSize="30dp"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/enter_article_amount" />
