--- a/app/src/main/res/layout/adapter_main_list.xml
+++ b/app/src/main/res/layout/adapter_main_list.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:background="@color/colorBackgroundItem"
     android:layout_margin="8dp"
+    android:descendantFocusability="blocksDescendants"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
@@ -13,46 +14,65 @@
         android:layout_margin="5dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_nameOfList"
-            android:layout_weight="2"
-            android:layout_gravity="center"
-            android:text="@string/list_name"
-            android:textStyle="bold"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/list_name" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Completion" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Protection" />
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_listName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="2"
             android:gravity="left"
             android:hint="List name"
             android:textColor="#000"
             android:textStyle="bold|italic" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_mainCompleted"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:hint="@string/completed" />
 
         <TextView
             android:id="@+id/tv_protected"
-            android:layout_width="192dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:hint="@string/prtctd" />
 
-        <TextView
-            android:id="@+id/tv_mainCompleted"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:hint="@string/completed" />
+        </LinearLayout>
 
     </LinearLayout>
 
